s3: smbd: leases - new torture test shows stat opens can get leases.

Can also issue breaks on these leases.

https://bugzilla.samba.org/show_bug.cgi?id=11102

Signed-off-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Ralph Böhme <slow@samba.org>
(cherry picked from commit 2d3db5e7930af9dd2a70727b2f2828bd73a1ec3b)